- Cyberware and bioware with pair bonuses and/or wireless pair bonuses but no `<pairinclude>` or `<wirelesspairinclude>` nodes specified now still have those bonuses applied properly for every pair of item.
- The default Internet Explorer version emulated for the character sheet viewer is now 11 instead of 8.
- Fixed a rare crash that could happen when attempting to print a character.

Build 221
Application Changes:
- Saved character settings files properly exclude disabled custom data directories that are present in the Chummer customdata folder.
- Added support for enabling individual items in Chummer on a case-by-case basis without needing to enable the entire sourcebook that contains them. Any item with a `<ignoresourcedisabled />` node inside of it can show up in Chummer regardless of whether or not its sourcebook is enabled.
- Fixed some crashes that could occur when opening characters under certain software conditions.
- When switching attribute categories as a shifter, the cursor now changes to a waiting/hourglass one until all the needed changes have been processed.
- Fixed a null reference when canceling out of the Advanced Lifestyle window.
- The prompt for whether or not the user wishes to delete an existing file outside of the Chummer directory now properly shows up instead of just showing the current UI language's code.
- Fixed various issues with advanced lifestyles' stats not updating properly when modifying them.
- Advanced lifestyles' lifestyle qualities' LP costs are now properly accounted for.
- Selling gear, weapons, and cyberware that are not inside something else now properly gives characters money.
- The Select Vehicle window no longer automatically resizes to an unusable size on smaller screens.
- Removing qualities that have added other qualities, e.g. Prototype Transhuman, no longer causes a crash.